# digital_analysis_task

./: .gitignore  README.md  pyproject.toml  statistical_analysis.txt
pm_tech_test/: connect_bigquery.py  create_final_visualisations.py  diagnostics.py  diagnostics2.py  new_customer.py  test_data.py  test_vis.py
