[tool.poetry]
name = "pm-tech-test"
version = "0.1.0"
description = ""
authors = ["Will Irving <wjnirving@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
matplotlib = "^3.9.2"
seaborn = "^0.13.2"
plotly = "^5.24.1"
scipy = "^1.14.1"
google-cloud-bigquery = "^3.27.0"
google-auth = "^2.36.0"
google-auth-oauthlib = "^1.2.1"
db-dtypes = "^1.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
